--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1622018627.48534b6",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
+    "nprogress": "^0.2.0",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
